src/test/ui/consts/const-eval/index_out_of_bounds.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/index_out_of_bounds.rs:1:19
   |
LL | static FOO: i32 = [][0];
   |                   ^^^^^ index out of bounds: the len is 0 but the index is 0

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
